--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 # do not push  __pycache__  &  database
 __pycache__/
 models/database.db
-
-
+flaskenv
+.gitignore
 #dependencies
-
+uploaded_image
 
 #testing
 
